# weekly-literature-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  weekly-monitor.yml
config/: journals.json  keywords.json
src/: __init__.py  config.py  crossref_client.py  email_notifier.py  export_validation_set.py  github_issue.py  obsidian_report.py  paper_utils.py  relevance_filter.py  state_manager.py  weekly_monitor.py
state/: README.md  monitor_state.json
tests/: test_monitor_reliability.py
